<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailimage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/burger" />

            <TextView
                android:id="@+id/detailname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/orderButtonBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/subb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/minustb"
                    android:onClick="decreament"
                    />

                <TextView
                    android:id="@+id/quantitydetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text='1'
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:onClick="increament"
                    app:srcCompat="@drawable/plus" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/descriptionFood" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="9dp" />

        <EditText
            android:id="@+id/phoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@android:string/emptyPhoneNumber"
            android:inputType="number"
            android:padding="9dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Price"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="$"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pricelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="15"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/insertButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/editbutton"
            android:text="Order Now" />

    </LinearLayout>

</LinearLayout>